<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:overScrollMode="ifContentScrolls"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical"
        android:text="@string/tv_title_str"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/txt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ed_hint_str" />

    <Button
        android:id="@+id/btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onExecutor"
        android:text="@string/btn_ctx_str" />
    
    <EditText
        android:id="@+id/et_monkey_count"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/ed_monkey_count_hint_str" />
          
    <Button
        android:id="@+id/btn_run_monkey"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onRunMonkey"
        android:text="@string/btn_run_monkey_str" />

    <ScrollView
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      >
    
	     <TextView
	         android:id="@+id/out"
	         android:layout_width="fill_parent"
	         android:layout_height="wrap_content"
	         android:scrollHorizontally="true"
	         android:textAlignment="textStart" />
     
     </ScrollView>

</LinearLayout>
